JUnits: Domain tests
OrderRepository crud operations tested

ExternalApiException test

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -86,11 +86,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<version>3.3.4</version> <!-- Asegúrate de usar la misma versión que
-			la de tu aplicación -->
+			<version>3.3.4</version> 
 			<scope>test</scope>
 		</dependency>
-
+		
+		<!-- H2 Database for in-memory testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
