--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
    port: 8080
    datasource:
-      username: daniel
-      url: jdbc:postgresql://db-orders:5432/orders
-      password: daniel
+      username: ${DB_USERNAME}
+      url: ${DB_URL}
+      password: ${DB_PASSWORD}
    application:
       name: app
 
@@ -18,7 +18,7 @@ management:
             enabled: true
 
 global:
-   scrape_interval: 10s 
+   scrape_interval: 10s
 
 scrape_configs:
 -  job_name: spring-boot-actuator
@@ -26,3 +26,12 @@ scrape_configs:
    static_configs:
    -  targets:
       - localhost:8080
+
+logging:
+   level:
+      org:
+         springframework:
+            security: DEBUG
+
+token:
+   secret_key: ${TOKEN_SECRET_KEY}
