--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: 'orders'
-      POSTGRES_USER: 'daniel'
-      POSTGRES_PASSWORD: 'daniel'
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - '5432:5432'
 
@@ -39,13 +39,18 @@ services:
       - prometheus
 
   es-publico-app:
-    image: dannyelyankee/es-publico-app:latest
+    image: dannyelyankee/es-publico-app:v3
     container_name: es-publico-app
     restart: always
     depends_on:
       - db-orders
     ports:
       - '8080:8080'
+    environment:
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_URL=${DB_URL}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - TOKEN_SECRET_KEY=${TOKEN_SECRET_KEY}
 
 volumes:
   pgdata:
